--- a/.babelrc
+++ b/.babelrc
@@ -4,5 +4,8 @@
     "@babel/preset-env",
     "@babel/preset-flow"
   ],
-  "plugins": ["@babel/plugin-syntax-dynamic-import"]
+  "plugins": [
+    "@babel/plugin-syntax-dynamic-import",
+    "@babel/plugin-proposal-class-properties"
+  ]
 }
