--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.48",
     "@babel/core": "^7.0.0-beta.48",
+    "@babel/plugin-proposal-class-properties": "7.0.0-beta.48",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0-beta.48",
     "@babel/preset-env": "^7.0.0-beta.48",
     "@babel/preset-flow": "^7.0.0-beta.48",
