--- a/package.json
+++ b/package.json
@@ -35,15 +35,15 @@
     "redux": "4.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.48",
-    "@babel/core": "^7.0.0-beta.48",
-    "@babel/plugin-proposal-class-properties": "7.0.0-beta.48",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0-beta.48",
-    "@babel/preset-env": "^7.0.0-beta.48",
-    "@babel/preset-flow": "^7.0.0-beta.48",
-    "@babel/preset-react": "^7.0.0-beta.48",
-    "@babel/register": "^7.0.0-beta.48",
-    "babel-core": "~7.0.0-bridge.0",
+    "@babel/cli": "^7.0.0-beta.49",
+    "@babel/core": "^7.0.0-beta.49",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.49",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0-beta.49",
+    "@babel/preset-env": "^7.0.0-beta.49",
+    "@babel/preset-flow": "^7.0.0-beta.49",
+    "@babel/preset-react": "^7.0.0-beta.49",
+    "@babel/register": "^7.0.0-beta.49",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "8.2.3",
     "babel-jest": "^23.0.0",
     "babel-loader": "8.0.0-beta.3",
@@ -69,8 +69,8 @@
     "script-ext-html-webpack-plugin": "^2.0.1",
     "style-loader": "0.21.0",
     "trash-cli": "~1.4.0",
-    "webpack": "4.8.3",
-    "webpack-cli": "2.1.4",
+    "webpack": "^4.9.1",
+    "webpack-cli": "^2.1.4",
     "webpack-dev-server": "3.1.4",
     "workbox-webpack-plugin": "3.2.0"
   },
