--- a/.babelrc
+++ b/.babelrc
@@ -5,6 +5,7 @@
     "@babel/preset-flow"
   ],
   "plugins": [
+    "@babel/plugin-transform-regenerator",
     "@babel/plugin-syntax-dynamic-import",
     "@babel/plugin-proposal-class-properties"
   ]
