--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/pure-js/js-exercises#readme",
   "dependencies": {
+    "@babel/polyfill": "^7.0.0-beta.49",
     "bootstrap": "4.1.1",
     "classnames": "~2.2.5",
     "firebase": "5.0.4",
@@ -39,6 +40,7 @@
     "@babel/core": "^7.0.0-beta.49",
     "@babel/plugin-proposal-class-properties": "^7.0.0-beta.49",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0-beta.49",
+    "@babel/plugin-transform-regenerator": "^7.0.0-beta.49",
     "@babel/preset-env": "^7.0.0-beta.49",
     "@babel/preset-flow": "^7.0.0-beta.49",
     "@babel/preset-react": "^7.0.0-beta.49",
