--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "webpack-dev-server --config webpack.dev.babel.js",
     "build": "webpack --config webpack.prod.babel.js",
-    "clean": "trash .tmp/ dist/ .publish",
+    "clean": "trash .publish",
     "deploy": "npm run build && gh-pages -d dist",
     "lint": "eslint src/**/*.jsx",
     "flow": "flow",
@@ -65,12 +65,13 @@
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.0.0",
     "mini-css-extract-plugin": "0.4.0",
+    "optimize-css-assets-webpack-plugin": "^4.0.1",
     "react-test-renderer": "^16.4.0",
     "redux-devtools": "^3.4.1",
-    "regenerator-runtime": "~0.11.1",
     "script-ext-html-webpack-plugin": "^2.0.1",
-    "style-loader": "0.21.0",
+    "style-loader": "^0.21.0",
     "trash-cli": "~1.4.0",
+    "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack": "^4.9.1",
     "webpack-cli": "^2.1.4",
     "webpack-dev-server": "3.1.4",
