--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "start": "webpack-dev-server --config webpack.dev.babel.js",
     "build": "webpack --config webpack.prod.babel.js",
-    "clean": "trash .publish",
     "deploy": "npm run build && gh-pages -d dist",
     "lint": "eslint src/**/*.jsx",
     "flow": "flow",
@@ -30,9 +29,7 @@
     "prismjs": "1.14.0",
     "react": "16.4.0",
     "react-dom": "16.4.0",
-    "react-loadable": "^5.4.0",
-    "react-redux": "^5.0.7",
-    "redux": "4.0.0"
+    "react-loadable": "^5.4.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.49",
@@ -67,10 +64,8 @@
     "mini-css-extract-plugin": "0.4.0",
     "optimize-css-assets-webpack-plugin": "^4.0.1",
     "react-test-renderer": "^16.4.0",
-    "redux-devtools": "^3.4.1",
     "script-ext-html-webpack-plugin": "^2.0.1",
     "style-loader": "^0.21.0",
-    "trash-cli": "~1.4.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack": "^4.9.1",
     "webpack-cli": "^2.1.4",
