--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "bootstrap": "4.1.1",
     "classnames": "~2.2.5",
     "firebase": "5.0.4",
-    "prismjs": "1.14.0",
     "react": "16.4.0",
     "react-dom": "16.4.0",
-    "react-loadable": "^5.4.0"
+    "react-loadable": "^5.4.0",
+    "react-syntax-highlighter": "7.0.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.49",
@@ -65,7 +65,6 @@
     "optimize-css-assets-webpack-plugin": "^4.0.1",
     "react-test-renderer": "^16.4.0",
     "script-ext-html-webpack-plugin": "^2.0.1",
-    "style-loader": "^0.21.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack": "^4.9.1",
     "webpack-cli": "^2.1.4",
