--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "script-ext-html-webpack-plugin": "^2.0.1",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack": "^4.9.1",
-    "webpack-cli": "^2.1.4",
+    "webpack-bundle-analyzer": "2.13.1",
+    "webpack-cli": "2.1.4",
     "webpack-dev-server": "3.1.4",
     "workbox-webpack-plugin": "3.2.0"
   },
