--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "@babel/register": "^7.0.0-beta.49",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "8.2.3",
-    "babel-jest": "^23.0.0",
+    "babel-jest": "23.0.1",
     "babel-loader": "8.0.0-beta.3",
     "babel-minify-webpack-plugin": "^0.3.1",
     "clean-webpack-plugin": "^0.1.19",
@@ -60,9 +60,9 @@
     "flow-bin": "0.73.0",
     "gh-pages": "~1.1.0",
     "html-webpack-plugin": "^3.2.0",
-    "jest": "^23.0.0",
+    "jest": "23.0.1",
     "mini-css-extract-plugin": "0.4.0",
-    "optimize-css-assets-webpack-plugin": "^4.0.1",
+    "optimize-css-assets-webpack-plugin": "4.0.2",
     "react-test-renderer": "^16.4.0",
     "script-ext-html-webpack-plugin": "^2.0.1",
     "uglifyjs-webpack-plugin": "^1.2.5",
