--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "optimize-css-assets-webpack-plugin": "4.0.2",
     "react-test-renderer": "^16.4.0",
     "script-ext-html-webpack-plugin": "^2.0.1",
+    "style-loader": "0.21.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack": "^4.9.1",
     "webpack-cli": "2.1.4",
