--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "script-ext-html-webpack-plugin": "^2.0.1",
     "style-loader": "0.21.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
-    "webpack": "^4.9.2",
+    "webpack": "4.10.1",
     "webpack-cli": "2.1.4",
     "webpack-dev-server": "3.1.4",
     "workbox-webpack-plugin": "3.2.0"
