--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "flow-bin": "0.73.0",
     "gh-pages": "~1.1.0",
     "html-webpack-plugin": "^3.2.0",
-    "jest": "23.0.1",
+    "jest": "^23.1.0",
     "mini-css-extract-plugin": "0.4.0",
     "optimize-css-assets-webpack-plugin": "4.0.2",
     "react-test-renderer": "^16.4.0",
