--- a/package.json
+++ b/package.json
@@ -53,12 +53,12 @@
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-airbnb-base": "~12.1.0",
-    "eslint-plugin-flowtype": "^2.48.0",
+    "eslint-plugin-flowtype": "2.49.3",
     "eslint-plugin-import": "2.12.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "7.8.2",
     "flow-bin": "0.73.0",
-    "gh-pages": "~1.1.0",
+    "gh-pages": "1.2.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.1.0",
     "mini-css-extract-plugin": "0.4.0",
@@ -68,7 +68,7 @@
     "style-loader": "0.21.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack": "4.10.2",
-    "webpack-cli": "2.1.4",
+    "webpack-cli": "3.0.1",
     "webpack-dev-server": "3.1.4",
     "workbox-webpack-plugin": "3.2.0"
   },
