--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "javascript skills training app",
   "main": "src/index.jsx",
   "scripts": {
-    "start": "webpack-dev-server --config webpack.dev.babel.js",
-    "build": "webpack --config webpack.prod.babel.js",
+    "start": "webpack-serve --open --config webpack.dev.babel.js --require @babel/register",
+    "build": "webpack --require @babel/register --config webpack.prod.js",
     "deploy": "npm run build && gh-pages -d dist",
     "lint": "eslint src/**/*.jsx",
     "flow": "flow",
@@ -42,7 +42,6 @@
     "@babel/preset-flow": "^7.0.0-beta.49",
     "@babel/preset-react": "^7.0.0-beta.49",
     "@babel/register": "^7.0.0-beta.49",
-    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "8.2.3",
     "babel-jest": "23.0.1",
     "babel-loader": "8.0.0-beta.3",
@@ -68,8 +67,8 @@
     "style-loader": "0.21.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack": "4.11.0",
-    "webpack-cli": "3.0.2",
-    "webpack-dev-server": "3.1.4",
+    "webpack-command": "^0.2.0",
+    "webpack-serve": "^1.0.2",
     "workbox-webpack-plugin": "3.2.0"
   },
   "keywords": [
