--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@babel/preset-flow": "^7.0.0-beta.49",
     "@babel/preset-react": "^7.0.0-beta.49",
     "@babel/register": "^7.0.0-beta.49",
+    "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "8.2.3",
     "babel-jest": "23.0.1",
     "babel-loader": "8.0.0-beta.3",
