--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "homepage": "https://github.com/pure-js/js-exercises#readme",
   "dependencies": {
-    "bootstrap": "4.1.1",
+    "bootstrap": "^4.1.3",
     "classnames": "~2.2.5",
     "firebase": "5.0.4",
     "react": "16.4.0",
