--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "bootstrap": "^4.1.3",
     "classnames": "~2.2.5",
-    "firebase": "5.0.4",
+    "firebase": "^5.5.8",
     "react": "16.4.0",
     "react-dom": "16.4.0",
     "react-loadable": "^5.4.0",
