--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/pure-js/js-exercises#readme",
   "dependencies": {
+    "@babel/runtime": "^7.1.5",
     "bootstrap": "^4.1.3",
     "classnames": "~2.2.5",
     "firebase": "^5.5.8",
