--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,4 @@
 language: node_js
 node_js:
   - "lts/*"
-  - "node"
-before_install:
-  - npm i -g npm@latest
-install:
-  - npm ci
-cache:
-  directories:
-  - "$HOME/.npm"
+cache: npm
