--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "bootstrap": "^4.1.3",
     "classnames": "~2.2.5",
     "firebase": "^5.5.8",
-    "react": "16.4.0",
-    "react-dom": "16.4.0",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
     "react-loadable": "^5.4.0",
     "react-syntax-highlighter": "^10.0.1",
     "webpack-cli": "^3.1.2"
