--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "babel-loader": "^8.0.4",
     "babel-minify-webpack-plugin": "^0.3.1",
     "clean-webpack-plugin": "^1.0.0",
-    "copy-webpack-plugin": "^4.5.1",
+    "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^0.28.11",
     "eslint": "^5.9.0",
     "eslint-config-airbnb": "^17.1.0",
@@ -63,15 +63,15 @@
     "gh-pages": "1.2.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.1.0",
-    "mini-css-extract-plugin": "0.4.0",
-    "optimize-css-assets-webpack-plugin": "4.0.2",
+    "mini-css-extract-plugin": "^0.4.5",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "react-test-renderer": "^16.4.0",
-    "script-ext-html-webpack-plugin": "^2.0.1",
+    "script-ext-html-webpack-plugin": "^2.1.3",
     "style-loader": "0.21.0",
-    "uglifyjs-webpack-plugin": "^1.2.5",
+    "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.25.1",
     "webpack-dev-server": "^3.1.10",
-    "workbox-webpack-plugin": "3.2.0"
+    "workbox-webpack-plugin": "^3.6.3"
   },
   "keywords": [
     "quiz",
