--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
-    "flow-bin": "0.73.0",
+    "flow-bin": "^0.91.0",
     "gh-pages": "1.2.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.1.0",
