--- a/package.json
+++ b/package.json
@@ -22,15 +22,13 @@
   },
   "homepage": "https://github.com/pure-js/js-exercises#readme",
   "dependencies": {
-    "@babel/runtime": "^7.1.5",
     "bootstrap": "^4.1.3",
     "classnames": "~2.2.5",
     "firebase": "^5.8.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-loadable": "^5.4.0",
-    "react-syntax-highlighter": "^10.0.1",
-    "webpack-cli": "^3.1.2"
+    "react-syntax-highlighter": "^10.0.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.5",
@@ -43,9 +41,9 @@
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
-    "babel-core": "7.0.0-bridge.0",
+    "@babel/runtime": "^7.3.1",
     "babel-eslint": "8.2.3",
-    "babel-jest": "23.0.1",
+    "babel-jest": "^24.0.0",
     "babel-loader": "^8.0.4",
     "babel-minify-webpack-plugin": "^0.3.1",
     "clean-webpack-plugin": "^1.0.0",
@@ -61,7 +59,7 @@
     "flow-bin": "^0.91.0",
     "gh-pages": "1.2.0",
     "html-webpack-plugin": "^3.2.0",
-    "jest": "^23.1.0",
+    "jest": "^24.0.0",
     "mini-css-extract-plugin": "^0.4.5",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "react-test-renderer": "^16.4.0",
@@ -69,6 +67,7 @@
     "style-loader": "0.21.0",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.25.1",
+    "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.1.10",
     "workbox-webpack-plugin": "^3.6.3"
   },
