--- a/package.json
+++ b/package.json
@@ -11,16 +11,8 @@
     "flow": "flow",
     "test": "jest --coverage"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/pure-js/js-exercises.git"
-  },
   "author": "pure-js",
   "license": "GPL-3.0",
-  "bugs": {
-    "url": "https://github.com/pure-js/js-exercises/issues"
-  },
-  "homepage": "https://github.com/pure-js/js-exercises#readme",
   "dependencies": {
     "bootstrap": "^4.1.3",
     "classnames": "~2.2.5",
@@ -57,7 +49,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
     "flow-bin": "^0.91.0",
-    "gh-pages": "1.2.0",
+    "gh-pages": "^2.0.1",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.0.0",
     "mini-css-extract-plugin": "^0.4.5",
@@ -73,5 +65,13 @@
   "keywords": [
     "quiz",
     "quizzes"
-  ]
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/js-quiz/js-quiz-web-app.git"
+  },
+  "bugs": {
+    "url": "https://github.com/js-quiz/js-quiz-web-app/issues"
+  },
+  "homepage": "https://github.com/js-quiz/js-quiz-web-app#readme"
 }
