--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "author": "pure-js",
   "license": "GPL-3.0",
   "dependencies": {
+    "@material-ui/core": "^3.9.1",
+    "@material-ui/icons": "^3.0.2",
     "bootstrap": "^4.2.1",
     "classnames": "^2.2.6",
     "firebase": "^5.8.1",
