--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "bootstrap": "^4.2.1",
     "classnames": "^2.2.6",
     "firebase": "^5.8.1",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
+    "react": "^16.8.1",
+    "react-dom": "^16.8.1",
     "react-loadable": "^5.5.0",
     "react-syntax-highlighter": "^10.1.2"
   },
@@ -57,9 +57,10 @@
     "mini-css-extract-plugin": "^0.5.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "script-ext-html-webpack-plugin": "^2.1.3",
+    "size-plugin": "^1.1.2",
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.1.1",
-    "webpack": "^4.29.0",
+    "webpack": "^4.29.3",
     "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.1.14",
     "workbox-webpack-plugin": "^3.6.3"
