--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-loadable": "^5.5.0",
+    "react-router-dom": "^4.3.1",
     "react-syntax-highlighter": "^10.1.2"
   },
   "devDependencies": {
