--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "code-quiz-react",
   "version": "3.1.2",
   "description": "coding skills training app",
-  "main": "src/index.jsx",
+  "main": "src/index.tsx",
   "scripts": {
     "start": "webpack-dev-server --open --config webpack.dev.js",
     "build": "webpack --require @babel/register --config webpack.prod.babel.js",
@@ -17,6 +17,9 @@
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
+    "@types/react": "^16.8.3",
+    "@types/react-dom": "^16.8.2",
+    "@types/react-router-dom": "^4.3.1",
     "bootstrap": "^4.3.1",
     "firebase": "^5.8.3",
     "react": "^16.8.2",
@@ -36,6 +39,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
     "@babel/runtime": "^7.3.1",
+    "awesome-typescript-loader": "^5.2.1",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.1.0",
     "babel-loader": "^8.0.5",
@@ -58,7 +62,9 @@
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "script-ext-html-webpack-plugin": "^2.1.3",
     "size-plugin": "^1.1.2",
+    "source-map-loader": "^0.2.4",
     "style-loader": "^0.23.1",
+    "typescript": "^3.3.3",
     "uglifyjs-webpack-plugin": "^2.1.1",
     "webpack": "^4.29.4",
     "webpack-cli": "^3.2.3",
