--- a/package.json
+++ b/package.json
@@ -20,17 +20,18 @@
     "@types/react": "^16.8.3",
     "@types/react-dom": "^16.8.2",
     "@types/react-router-dom": "^4.3.1",
+    "@types/react-syntax-highlighter": "^10.1.0",
     "bootstrap": "^4.3.1",
     "firebase": "^5.8.3",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-loadable": "^5.5.0",
     "react-router-dom": "^4.3.1",
-    "react-syntax-highlighter": "^10.1.2"
+    "react-syntax-highlighter": "^10.1.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.2.2",
+    "@babel/core": "^7.3.3",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-regenerator": "^7.0.0",
     "@babel/polyfill": "^7.2.5",
