--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@types/react-dom": "^16.8.2",
     "@types/react-router-dom": "^4.3.1",
     "@types/react-syntax-highlighter": "^10.1.0",
+    "airbrake-js": "^1.6.4",
     "bootstrap": "^4.3.1",
+    "cross-fetch": "^3.0.1",
     "firebase": "^5.8.3",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
