--- a/package.json
+++ b/package.json
@@ -17,30 +17,30 @@
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
-    "@types/react": "^16.8.3",
+    "@types/react": "^16.8.6",
     "@types/react-dom": "^16.8.2",
     "@types/react-router-dom": "^4.3.1",
     "@types/react-syntax-highlighter": "^10.1.0",
-    "airbrake-js": "^1.6.4",
+    "airbrake-js": "^1.6.5",
     "bootstrap": "^4.3.1",
     "cross-fetch": "^3.0.1",
-    "firebase": "^5.8.3",
-    "react": "^16.8.2",
-    "react-dom": "^16.8.2",
+    "firebase": "^5.8.4",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
     "react-loadable": "^5.5.0",
     "react-router-dom": "^4.3.1",
     "react-syntax-highlighter": "^10.1.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.3.3",
+    "@babel/core": "^7.3.4",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-transform-regenerator": "^7.0.0",
+    "@babel/plugin-transform-regenerator": "^7.3.4",
     "@babel/polyfill": "^7.2.5",
-    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
-    "@babel/runtime": "^7.3.1",
+    "@babel/runtime": "^7.3.4",
     "awesome-typescript-loader": "^5.2.1",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.1.0",
@@ -50,7 +50,7 @@
     "clean-webpack-plugin": "^1.0.1",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^2.1.0",
-    "eslint": "^5.14.0",
+    "eslint": "^5.14.1",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-flowtype": "^3.4.2",
@@ -66,13 +66,14 @@
     "size-plugin": "^1.1.2",
     "source-map-loader": "^0.2.4",
     "style-loader": "^0.23.1",
-    "typescript": "^3.3.3",
-    "uglifyjs-webpack-plugin": "^2.1.1",
-    "webpack": "^4.29.4",
+    "tslint": "^5.13.0",
+    "typescript": "^3.3.3333",
+    "uglifyjs-webpack-plugin": "^2.1.2",
+    "webpack": "^4.29.6",
     "webpack-bundle-analyzer": "^3.0.4",
     "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.1.14",
-    "workbox-webpack-plugin": "^3.6.3"
+    "webpack-dev-server": "^3.2.1",
+    "workbox-webpack-plugin": "^4.0.0"
   },
   "keywords": [
     "quiz",
