--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "webpack --config webpack.prod.js",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
-    "lint": "eslint src/**/*.{js,jsx}",
+    "lint": "tslint src/**/*.{ts,tsx}",
     "test": "jest --coverage"
   },
   "author": "pure-js",
@@ -19,6 +19,7 @@
     "@material-ui/icons": "^3.0.2",
     "@types/react": "^16.8.6",
     "@types/react-dom": "^16.8.2",
+    "@types/react-loadable": "^5.5.0",
     "@types/react-router-dom": "^4.3.1",
     "@types/react-syntax-highlighter": "^10.1.0",
     "airbrake-js": "^1.6.5",
@@ -29,7 +30,8 @@
     "react-dom": "^16.8.3",
     "react-loadable": "^5.5.0",
     "react-router-dom": "^4.3.1",
-    "react-syntax-highlighter": "^10.1.3"
+    "react-syntax-highlighter": "^10.1.3",
+    "uninstall": "0.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
@@ -42,7 +44,6 @@
     "@babel/register": "^7.0.0",
     "@babel/runtime": "^7.3.4",
     "awesome-typescript-loader": "^5.2.1",
-    "babel-eslint": "^10.0.1",
     "babel-jest": "^24.1.0",
     "babel-loader": "^8.0.5",
     "babel-minify-webpack-plugin": "^0.3.1",
@@ -50,13 +51,6 @@
     "clean-webpack-plugin": "^1.0.1",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^2.1.0",
-    "eslint": "^5.14.1",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-flowtype": "^3.4.2",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.12.4",
     "gh-pages": "^2.0.1",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.1.0",
@@ -66,8 +60,8 @@
     "size-plugin": "^1.1.2",
     "source-map-loader": "^0.2.4",
     "style-loader": "^0.23.1",
-    "tslint": "^5.13.0",
-    "typescript": "^3.3.3333",
+    "tslint": "^5.14.0",
+    "typescript": "^3.3.4000",
     "uglifyjs-webpack-plugin": "^2.1.2",
     "webpack": "^4.29.6",
     "webpack-bundle-analyzer": "^3.0.4",
