--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "react-dom": "^16.8.3",
     "react-loadable": "^5.5.0",
     "react-router-dom": "^4.3.1",
-    "react-syntax-highlighter": "^10.1.3",
-    "uninstall": "0.0.0"
+    "react-syntax-highlighter": "^10.1.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
@@ -58,14 +57,14 @@
     "mini-css-extract-plugin": "^0.5.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "script-ext-html-webpack-plugin": "^2.1.3",
-    "size-plugin": "^1.1.2",
+    "size-plugin": "^2.0.0",
     "source-map-loader": "^0.2.4",
     "style-loader": "^0.23.1",
     "tslint": "^5.14.0",
     "typescript": "^3.3.4000",
     "uglifyjs-webpack-plugin": "^2.1.2",
     "webpack": "^4.29.6",
-    "webpack-bundle-analyzer": "^3.4.1",
+    "webpack-bundle-analyzer": "^3.5.0",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.1",
     "workbox-webpack-plugin": "^4.0.0"
