--- a/package.json
+++ b/package.json
@@ -43,29 +43,28 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
     "@babel/runtime": "^7.3.4",
-    "awesome-typescript-loader": "^5.2.1",
     "babel-jest": "^24.1.0",
     "babel-loader": "^8.0.5",
-    "babel-minify-webpack-plugin": "^0.3.1",
     "babel-plugin-transform-imports": "^1.5.1",
     "clean-webpack-plugin": "^1.0.1",
     "copy-webpack-plugin": "^4.6.0",
-    "css-loader": "^2.1.0",
+    "css-loader": "^5.1.3",
     "gh-pages": "^2.0.1",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.1.0",
-    "mini-css-extract-plugin": "^0.5.0",
+    "mini-css-extract-plugin": "^1.3.9",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "script-ext-html-webpack-plugin": "^2.1.3",
+    "script-ext-html-webpack-plugin": "^2.1.5",
     "size-plugin": "^2.0.0",
     "source-map-loader": "^0.2.4",
-    "style-loader": "^0.23.1",
+    "style-loader": "^2.0.0",
+    "terser-webpack-plugin": "^4.2.3",
+    "ts-loader": "^8.0.18",
     "tslint": "^5.14.0",
-    "typescript": "^3.3.4000",
-    "uglifyjs-webpack-plugin": "^2.1.2",
-    "webpack": "^4.29.6",
+    "typescript": "^4.2.3",
+    "webpack": "^4.46.0",
     "webpack-bundle-analyzer": "^3.5.0",
-    "webpack-cli": "^3.2.3",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.2.1",
     "workbox-webpack-plugin": "^4.0.0"
   },
