--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,10 +5,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - uses: actions/setup-node@v1
         with:
-          node-version: '14'
-      - run: npm install && npm install -g @lhci/cli@0.7.x
+          node-version: '14.x'
+      - run: npm install -g npm@latest
+      - run: npm ci && npm install -g @lhci/cli@0.7.x
       - run: npm run build
       - run: lhci autorun
         env:
