--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "deploy": "gh-pages -d dist",
     "lint": "tslint src/**/*.{ts,tsx}",
     "analyze": "webpack --profile --json > stats.json --config webpack.prod.js",
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "release": "standard-version"
   },
   "author": "pure-js",
   "license": "GPL-3.0",
@@ -53,6 +54,7 @@
     "mini-css-extract-plugin": "^1.3.9",
     "size-plugin": "^3.0.0",
     "source-map-loader": "^2.0.1",
+    "standard-version": "^9.1.1",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^5.1.1",
     "ts-loader": "^8.0.18",
