--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "webpack --config webpack.prod.js",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
-    "lint": "tslint src/**/*.{ts,tsx}",
+    "lint": "eslint src/**/*.{js,jsx,ts,tsx}",
     "analyze": "webpack --profile --json > stats.json --config webpack.prod.js",
     "test": "jest --coverage",
     "release": "standard-version"
@@ -27,7 +27,7 @@
     "@types/react-loadable": "^5.5.0",
     "@types/react-router-dom": "^4.3.1",
     "@types/react-syntax-highlighter": "^10.1.0",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.6.0",
     "firebase": "^8.3.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
@@ -44,23 +44,33 @@
     "@babel/preset-react": "^7.12.13",
     "@babel/register": "^7.0.0",
     "@babel/runtime": "^7.3.4",
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/parser": "^4.19.0",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "babel-plugin-transform-imports": "^2.0.0",
     "copy-webpack-plugin": "^8.1.0",
     "css-loader": "^5.1.3",
     "css-minimizer-webpack-plugin": "^1.3.0",
+    "eslint": "^7.22.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.3.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.23.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "gh-pages": "^3.1.0",
     "html-webpack-plugin": "^5.3.1",
     "jest": "^26.6.3",
     "mini-css-extract-plugin": "^1.3.9",
+    "prettier": "2.2.1",
     "size-plugin": "^3.0.0",
     "source-map-loader": "^2.0.1",
     "standard-version": "^9.1.1",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^5.1.1",
     "ts-loader": "^8.0.18",
-    "tslint": "^6.1.3",
     "typescript": "^4.2.3",
     "webpack": "^5.27.2",
     "webpack-bundle-analyzer": "^4.4.0",
