--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "lint": "eslint src/**/*.{js,jsx,ts,tsx}",
     "analyze": "webpack --profile --json > stats.json --config webpack.prod.js",
     "test": "jest --coverage",
-    "release": "standard-version"
+    "release": "standard-version",
+    "format": "prettier --write \"**/*.+(js|jsx|json|yml|yaml|css|md)\""
   },
   "author": "pure-js",
   "license": "GPL-3.0",
