--- a/package.json
+++ b/package.json
@@ -27,14 +27,13 @@
     "@types/react": "^16.8.6",
     "@types/react-dom": "^16.8.2",
     "@types/react-loadable": "^5.5.0",
-    "@types/react-router-dom": "^4.3.1",
     "@types/react-syntax-highlighter": "^10.1.0",
     "bootstrap": "^4.6.0",
     "firebase": "^8.3.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "react-router-dom": "^4.3.1",
-    "react-syntax-highlighter": "^15.4.3"
+    "react-syntax-highlighter": "^15.4.3",
+    "wouter": "^2.7.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
