--- a/lighthouserc.yml
+++ b/lighthouserc.yml
@@ -1,6 +1,7 @@
 ci:
   collect:
-    url: ['http://localhost/', 'http://localhost/exam', 'http://localhost/results']
+    url:
+      ['http://localhost/', 'http://localhost/exam', 'http://localhost/results']
     staticDistDir: './dist'
     isSinglePageApplication: true
   upload:
