--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lint:js": "eslint src/**/*.{js,jsx,ts,tsx}",
     "analyze": "webpack --profile --json > stats.json --config webpack.prod.cjs",
     "test": "node --experimental-vm-modules node_modules/.bin/jest --config jest.config.cjs --coverage",
+    "e2e": "playwright",
     "release": "standard-version",
     "format": "prettier --write \"**/*.+(json|yml|yaml|css|md|cjs|mjs)\""
   },
@@ -66,6 +67,7 @@
     "html-webpack-plugin": "^5.3.1",
     "jest": "^26.6.3",
     "mini-css-extract-plugin": "^1.3.9",
+    "playwright": "^1.10.0",
     "prettier": "2.2.1",
     "size-plugin": "^3.0.0",
     "source-map-loader": "^2.0.1",
