--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '15'
-      - name: Install modules
+      - name: Install dependencies
         run: npm ci
       - name: Run tests
         run: npm test
